force-app/main/default/objects/ARF_Plan_Installment__c/ARF_Plan_Installment__c.object-meta.xml
<CustomObject>
    <label>Plan Installment</label>
    <nameField><label>Installment Number</label><displayFormat>INST-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Plan Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>