force-app/main/default/objects/ARF_Plan_Installment__c/fields/Installment_Number__c.field-meta.xml
<CustomField>
    <fullName>Installment_Number__c</fullName>
    <label>Installment Number</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>