force-app/main/default/objects/ARF_Plan_Installment__c/fields/Late_Fee_Applied__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Applied__c</fullName>
    <label>Late Fee Applied</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>