force-app/main/default/objects/ARF_Plan_Installment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Lookup</type>
    <referenceTo>ARF_Payment__c</referenceTo>
    <relationshipName>Plan_Installments</relationshipName>
    <relationshipLabel>Plan Installments</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>