force-app/main/default/objects/ARF_Plan_Installment__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <type>MasterDetail</type>
    <referenceTo>ARF_Payment_Plan__c</referenceTo>
    <relationshipName>Plan_Installments</relationshipName>
    <relationshipLabel>Plan Installments</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>