force-app/main/default/objects/ARF_Plan_Installment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Late</fullName><default>false</default><label>Late</label></value>
            <value><fullName>Missed</fullName><default>false</default><label>Missed</label></value>
            <value><fullName>Waived</fullName><default>false</default><label>Waived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>